[gd_scene load_steps=5 format=3 uid="uid://btylcfao7o3jl"]

[ext_resource type="Script" uid="uid://chomdep8udd4k" path="res://Scripts/Ranking/ranking.gd" id="1_ow5ii"]
[ext_resource type="StyleBox" uid="uid://dckk8emmywlms" path="res://Themes/menu.tres" id="2_6v6rg"]
[ext_resource type="Texture2D" uid="uid://8f6jbe407kad" path="res://Imagenes/indio.png" id="2_xyin3"]
[ext_resource type="AudioStream" uid="uid://di45b1ofdnwl1" path="res://Musica/buttonClickCut.mp3" id="3_w0m20"]

[node name="Ranking" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 2.0
offset_right = 19.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ow5ii")

[node name="ColorRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 1364.0
offset_bottom = 771.0
texture = ExtResource("2_xyin3")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 121.0
offset_top = -12.0
offset_right = 1203.0
offset_bottom = 262.0
theme_override_font_sizes/font_size = 110
text = "RANKING SEMANAL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 201.0
offset_right = 1315.0
offset_bottom = 709.0
theme_override_constants/separation = 20

[node name="TemplateRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="NombreLabel" type="Label" parent="VBoxContainer/TemplateRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 90
vertical_alignment = 1

[node name="SeparadorLabel" type="Label" parent="VBoxContainer/TemplateRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 90
text = "-"
horizontal_alignment = 1

[node name="PuntajeLabel" type="Label" parent="VBoxContainer/TemplateRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 90
horizontal_alignment = 1
vertical_alignment = 1

[node name="BotonVolver" type="Button" parent="."]
layout_mode = 0
offset_left = 1091.0
offset_top = 32.0
offset_right = 1315.0
offset_bottom = 130.0
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 90
theme_override_styles/focus = ExtResource("2_6v6rg")
theme_override_styles/hover_pressed_mirrored = ExtResource("2_6v6rg")
theme_override_styles/hover_pressed = ExtResource("2_6v6rg")
theme_override_styles/hover = ExtResource("2_6v6rg")
theme_override_styles/pressed = ExtResource("2_6v6rg")
theme_override_styles/normal = ExtResource("2_6v6rg")
text = "Volver"

[node name="clickButton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_w0m20")
